# ksp_gfold

./: .gitignore  CMakeLists.txt  LICENSE  README.md
conf/: conf.yaml  conf_10km.yaml
rocket/: Hopper 1.craft  Hopper 1.loadmeta  Hopper-HA.craft  Hopper-HA.loadmeta
scripts/: landing_pad_coord.py
scripts/solver/: gfold.py  solver.py  visualization.py
src/: draw_trajectory.cpp  draw_trajectory.hpp  gfold_solver.cpp  gfold_solver.hpp  ksp_gfold.cpp  socp_solver.cpp  socp_solver.hpp  test_solver.cpp
src/solver/: CMakeLists.txt
src/solver/include/: cpg_solve.h  cpg_workspace.h
src/solver/solver_code/: CMakeLists.txt
src/solver/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
